# libtriangulation

./: .gitignore  CMakeLists.txt  README.md
include/: triangulation.h
src/: bindings.cpp  triangulation.cpp
test/: triangulation_test.cpp
